--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "test": "jest --passWithNoTests",
+    "test:watch": "jest --watch",
     "docker-dev": "docker build -t 'printatopia' -f Dockerfile.dev . && docker compose up",
-    "docker-install": "docker exec -it printatopia pnpm i",
-    "prepare": "husky"
+    "docker-modules": "docker exec -it printatopia pnpm i",
+    "prepare": "husky",
+    "format": "prettier --write ."
   },
   "dependencies": {
     "@radix-ui/react-slot": "1.1.1",
@@ -23,15 +26,26 @@
     "tailwindcss-animate": "1.0.7"
   },
   "devDependencies": {
+    "@commitlint/cli": "19.6.1",
+    "@commitlint/config-conventional": "19.6.0",
     "@eslint/eslintrc": "3",
+    "@testing-library/dom": "10.4.0",
+    "@testing-library/jest-dom": "6.6.3",
+    "@testing-library/react": "16.2.0",
     "@types/node": "20",
     "@types/react": "19",
     "@types/react-dom": "19",
+    "commitizen": "4.3.1",
+    "cz-conventional-changelog": "3.3.0",
     "eslint": "9",
     "eslint-config-next": "15.1.5",
     "husky": "9.1.7",
+    "jest": "29.7.0",
+    "jest-environment-jsdom": "29.7.0",
     "postcss": "8",
+    "semantic-release": "24.2.1",
     "tailwindcss": "3.4.1",
+    "ts-node": "^10.9.2",
     "typescript": "5"
   }
 }
